--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,7 +5,7 @@ name: Python package
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, numpy_prod ]
   pull_request:
     branches: [ master ]
 
@@ -30,6 +30,7 @@ jobs:
         python -m pip install flake8 pytest
         python -m pip install -e .
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip list
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
