use just issue60 for GH testing at push

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ master, issue60 ]
   pull_request:
-    branches: [ master, issue60 ]
+    branches: [ master ]
 
 jobs:
   build:
